--- a/geonode/templates/maps/tweetview.html
+++ b/geonode/templates/maps/tweetview.html
@@ -5,25 +5,25 @@
 
 {% block head %}
 
-<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/misc/jquery-1.8.0.js"></script>
-<link rel="stylesheet" href="{{ GEONODE_CLIENT_LOCATION }}externals/misc/flot/jquery-ui-1.8.22.custom.css"
+<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/js/jquery-1.8.0.js"></script>
+<link rel="stylesheet" href="{{ GEONODE_CLIENT_LOCATION }}externals/lib/flot/jquery-ui-1.8.22.custom.css"
       type="text/css">
-<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/misc/flot/jquery-ui-vertbutton.js"></script>
+<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/flot/jquery-ui-vertbutton.js"></script>
 <script type="text/javascript"
-        src="{{ GEONODE_CLIENT_LOCATION }}externals/misc/flot/jquery-ui-1.8.22.custom.min.js"></script>
-<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/misc/flot/jquery.flot.js"></script>
-<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/misc/flot/jquery.flot.time.js"></script>
-<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/misc/flot/jquery.flot.resize.js"></script>
-<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/misc/flot/jquery.flot.navigate.js"></script>
-<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/misc/flot/grapher.js"></script>
-<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/misc/flot/FastGraph.js"></script>
+        src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/flot/jquery-ui-1.8.22.custom.min.js"></script>
+<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/flot/jquery.flot.js"></script>
+<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/flot/jquery.flot.time.js"></script>
+<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/flot/jquery.flot.resize.js"></script>
+<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/flot/jquery.flot.navigate.js"></script>
+<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/flot/grapher.js"></script>
+<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/flot/FastGraph.js"></script>
 
 
 
 {% include "geonode/ext_header.html" %}
 {% include "geonode/app_header.html" %}
 {% include "geonode/geo_header.html" %}
-<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/misc/nicEdit.js"></script>
+<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/js/nicEdit.js"></script>
 
 <script src="https://www.google.com/jsapi?client={{GOOGLE_API_KEY}}"></script>
 
