--- a/geonode/search/templates/search/_general_filters.html
+++ b/geonode/search/templates/search/_general_filters.html
@@ -1,12 +1,20 @@
 {% load i18n %}
 {% load base_tags %}
 {% load taggit_extras %}
+<nav class="filter1">
+    <h2><a href="#" class="toggle toggle-nav"><i class="icon-chevron-right"></i>{% trans "Data Source" %}</a></h2>
+    <ul class="nav hide" id="sources">
+        <li><a data-class="all" class="active trigger1-query">{% trans "All Sources" %}</a></li>
+        <li><a data-class="local" class="active trigger1-query">{% trans "WorldMap" %}</a></li>
+        <li><a data-class="remote" class="active trigger1-query">{% trans "Remote Sources" %}</a></li>
+    </ul>
+</nav>
 <nav class="filter">
   <h2><a href="#" class="toggle toggle-nav"><i class="icon-chevron-right"></i>{% trans "Categories" %}</a></h2>
   <ul class="nav hide" id="categories">
     <li><a data-class="all" class="active trigger-query">{% trans "All Categories" %}</a></li>
         {% for category, count in categories.items %}
-            <li><a data-class="{{category.identifier}}" class="trigger-query">{{ category.gn_description }}
+            <li><a data-class="{{category.name}}" class="trigger-query">{{ category.title }}
             <span class="badge pull-right">{{ count }}</span>
             </a></li>
         {% endfor %}
