--- a/geonode/search/templates/search/search_content.html
+++ b/geonode/search/templates/search/search_content.html
@@ -1,11 +1,11 @@
 {% load pagination_tags %}
+
 {% load i18n %}
-<div class="tab-pane active list paginate-contents" id="all">
+<div class="tab-pane active list paginate-contents" id="all" >
   <p class="search-count">Total: {{ total }}</p>
 {% if object_list|length > 0 %}
-{% autopaginate object_list 4 %}
+{% autopaginate object_list 20 %}
 {% for object in object_list %}
-  {{ object.o }}
   {% if object.o.class_name == 'Layer' %}
     {% with object.o as layer %}
       {% include "layers/_layer_list_item.html" %}
@@ -14,7 +14,7 @@
     {% with object.o as map %}
       {% include "maps/_map_list_item.html" %}
     {% endwith %}
-  {% elif object.o.class_name == 'Profile' %}
+  {% elif object.o.class_name == 'Contact' %}
     {% with object as contact %}
       {% include "profiles/_profile_list_item.html" %}
     {% endwith %}
