--- a/geonode/static/theme/site.css
+++ b/geonode/static/theme/site.css
@@ -57,7 +57,7 @@ body {
 
 a {
     color: #18469C;
-    text-decoration: underline;
+    /* text-decoration: underline; */
 }
 
 h1, h2, h3, h4, h5, h6 {
