--- a/geonode/templates/maps/map_describe.html
+++ b/geonode/templates/maps/map_describe.html
@@ -5,7 +5,7 @@
 
 {% block head %}
 {% include "geonode/ext_header.html" %}
-<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/misc/nicEdit.js"></script>
+<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/img/nicEdit.js"></script>
 {{ block.super }}
 <script type="text/javascript">
     var app;
@@ -36,7 +36,7 @@
     </form>
 </div>
  <script type="text/javascript">
-     var nicEditIconsPath = "{{ GEONODE_CLIENT_LOCATION }}externals/misc/images/nicEditorIcons.gif"
+     var nicEditIconsPath = "{{ GEONODE_CLIENT_LOCATION }}externals/lib/img/nicEditorIcons.gif"
      var myNicEditor = new nicEditor({fullPanel : true,  maxHeight: 190, iconsPath: nicEditIconsPath}).panelInstance("mapdescription");
  </script>
 {% endblock %}
