--- a/geonode/templates/search_scripts.html
+++ b/geonode/templates/search_scripts.html
@@ -1,5 +1,5 @@
-<script src="{{ GEONODE_CLIENT_LOCATION }}externals/misc/bootstrap-datepicker.js" type="text/javascript"></script>
-<script src="{{ GEONODE_CLIENT_LOCATION }}externals/misc/jquery.tinysort.min.js"></script>
+<script src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/js/bootstrap-datepicker.js" type="text/javascript"></script>
+<script src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/js/jquery.tinysort.min.js"></script>
 <script src="{{ GEONODE_CLIENT_LOCATION }}script/search/global_search.js"></script>
 <script src="{{ GEONODE_CLIENT_LOCATION }}script/search/explore.js"></script>
 <script>
