Use forked version of piston (django-1.5 compatible) for gazetteer TODO: switch to django-rest-framework or tastypie Get gazetteer geocoders working

--- a/geonode/worldmap/templates/geonode/sdk_header.html
+++ b/geonode/worldmap/templates/geonode/sdk_header.html
@@ -116,7 +116,15 @@ var nicEditIconsPath = "{{ STATIC_URL }}worldmap/img/nicEditorIcons.gif"
              autoExpand: "query",
              actionTarget: "paneltbar",
              outputTarget: "query"
-         },
+         }{% if USE_GAZETTEER %},
+                     {
+                         ptype: "gxp_gazetteertool",
+                         actionTarget: "paneltbar",
+                         title: '<span class="x-btn-text">{% trans 'Gazetteer' %}</span>',
+                         iconCls: null,
+                         toggleGroup: 'interaction',
+                         pressed: false
+                     }{% endif %},
          {
              actions: ["-"],
              actionTarget: "paneltbar"
