--- a/geonode/worldmap/templates/tab_base.html
+++ b/geonode/worldmap/templates/tab_base.html
@@ -45,6 +45,7 @@
 
     <script type="text/javascript" src="{% url "django.views.i18n.javascript_catalog" %}"></script>
     <script type="text/javascript" src="{% url "lang" %}"></script>
+    <script src="{{ STATIC_URL }}lib/js/select2.js"></script>
     <style type="text/css">
       .select2-drop{
         color: black;
