--- a/geonode/worldmap/static/worldmap/css/base.css
+++ b/geonode/worldmap/static/worldmap/css/base.css
@@ -1,5 +1,5 @@
 
-.navbar .navbar-inner {
+.navbar-inverse {
     background: none repeat scroll 0 0 #FFF;
     border: 0 none;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), 0 -1px 0 rgba(0, 0, 0, 0.1) inset;
