--- a/geonode/worldmap/templates/tab_base.html
+++ b/geonode/worldmap/templates/tab_base.html
@@ -14,6 +14,9 @@
       {% else %}
       <link href="{{ STATIC_URL }}lib/css/assets.min.css" rel="stylesheet"/>
       {% endif %}
+        <link href="{{ STATIC_URL }}geonode/css/base.css" rel="stylesheet" />
+        <link href="{{ STATIC_URL }}worldmap/css/base.css" rel="stylesheet" />
+        <link href="{{ STATIC_URL }}worldmap/css/site.css" rel="stylesheet" />
       {% block extra_head %}{% endblock %}
     {% endblock %}
     <!--[if lt IE 9]>
