Update some static script URL's

--- a/geonode/templates/index.html
+++ b/geonode/templates/index.html
@@ -5,10 +5,10 @@
 
 {% block head %}
 {{ block.super }}
-<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/js/jquery.simplemodal.1.4.4.min.js"></script>
-<link rel="stylesheet" type="text/css" href="{{ GEONODE_CLIENT_LOCATION }}externals/lib/css/simplemodal.css" />
-<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/js/jquery.nivo.slider.pack.js"></script>
-<link rel="stylesheet" type="text/css" href="{{ GEONODE_CLIENT_LOCATION }}externals/lib/css/nivo-slider.css" />
+<script type="text/javascript" src="{{ STATIC_URL }}geonode/externals/lib/js/jquery.simplemodal.1.4.4.min.js"></script>
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}geonode/externals/lib/css/simplemodal.css" />
+<script type="text/javascript" src="{{ STATIC_URL }}geonode/externals/lib/js/jquery.nivo.slider.pack.js"></script>
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}geonode/externals/lib/css/nivo-slider.css" />
 
 <script type="text/javascript">
     $(window).load(function() {
