--- a/geonode/templates/search_scripts.html
+++ b/geonode/templates/search_scripts.html
@@ -1,7 +1,7 @@
-<script src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/js/bootstrap-datepicker.js" type="text/javascript"></script>
-<script src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/js/jquery.tinysort.min.js"></script>
-<script src="{{ GEONODE_CLIENT_LOCATION }}script/search/global_search.js"></script>
-<script src="{{ GEONODE_CLIENT_LOCATION }}script/search/explore.js"></script>
+<script src="{{ STATIC_URL }}geonode/externals/lib/js/bootstrap-datepicker.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}geonode/externals/lib/js/jquery.tinysort.min.js"></script>
+<script src="{{ STATIC_URL }}geonode/script/search/global_search.js"></script>
+<script src="{{ STATIC_URL }}geonode/script/search/explore.js"></script>
 <script>
     initial_query = '{{ initial_query }}';
 </script>
